--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,12 +24,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # fitebase packages
-  firebase_core: ^2.25.5
-  cloud_firestore: ^4.15.5
-  firebase_auth: ^4.17.5
-  firebase_storage: ^11.6.6
-
   flutter_localizations:
     sdk: flutter
   intl: ^0.18.1
@@ -40,6 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  flutter_bloc: ^8.1.5
+  equatable: ^2.0.5
+  material_design_icons_flutter: ^7.0.7296
 
 dev_dependencies:
   flutter_test:
@@ -51,7 +48,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
-  intl_translation: ^0.18.1
+  intl_translation: ^0.19.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
