feat: 新增食物的彈出視窗
調整項目：
- food_item_list_page 新增一個 _showAddFoodItemDialog 以新增新的食物
- 新增點選選擇日期的 _selectStorageDate & _selectExpirationDate，未來會將 _selectExpirationDate 改成選取時間範圍的方法
- 新增獲取 FoodItemType 名稱的方法
- 新增 bottomNavigationBar

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_bloc: ^8.1.5
   equatable: ^2.0.5
   material_design_icons_flutter: ^7.0.7296
+  flutter_date_range_picker: ^0.0.14
 
 dev_dependencies:
   flutter_test:
