--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -18,7 +18,7 @@ jobs:
         java-version: '12.x'
     - uses: subosito/flutter-action@v1
       with:
-        flutter-version: 'stable'
+        flutter-version: '3.19.6'
     - run: flutter pub get
     - run: flutter test
     - run: sudo gem install cocoapods
