--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   equatable: ^2.0.5
   material_design_icons_flutter: ^7.0.7296
   flutter_date_range_picker: ^0.0.14
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
