--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   material_design_icons_flutter: ^7.0.7296
   flutter_date_range_picker: ^0.0.14
   shared_preferences: ^2.2.3
+  curved_labeled_navigation_bar: ^2.0.2
+  flutter_slidable: ^3.1.0
 
 dev_dependencies:
   flutter_test:
