test: 新增 bloc_test 套件以幫助測試 blocs

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   shared_preferences: ^2.2.3
   curved_labeled_navigation_bar: ^2.0.2
   flutter_slidable: ^3.1.0
+  bloc_test: ^9.1.7
+  test: ^1.24.9
 
 dev_dependencies:
   flutter_test:
