--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,23 +26,29 @@ dependencies:
 
   flutter_localizations:
     sdk: flutter
+  authentication_repository:
+    path: packages/authentication_repository
+  form_inputs:
+    path: packages/form_inputs
   intl: ^0.18.1
   image_cropper: ^5.0.1
   image_picker: ^1.0.7
   dotted_border: ^2.1.0
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_bloc: ^8.1.5
   equatable: ^2.0.5
   material_design_icons_flutter: ^7.0.7296
   flutter_date_range_picker: ^0.0.14
+  firebase_core: ^2.30.1
   shared_preferences: ^2.2.3
   curved_labeled_navigation_bar: ^2.0.2
   flutter_slidable: ^3.1.0
-  bloc_test: ^9.1.7
   test: ^1.24.9
+  meta: ^1.11.0
+  formz: ^0.6.1
+  google_fonts: ^6.2.1
+  font_awesome_flutter: ^10.7.0
+  flow_builder: ^0.1.0
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +61,8 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
   intl_translation: ^0.19.0
+  bloc_test: ^9.1.7
+  mocktail: ^1.0.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
