--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -7,8 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-
+  build-ios:
     runs-on: macos-latest
 
     steps:
@@ -23,3 +22,18 @@ jobs:
     - run: flutter test
     - run: sudo gem install cocoapods
     - run: flutter build ios --release --no-codesign
+
+  build-android:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '12.x'
+    - uses: subosito/flutter-action@v1
+      with:
+        flutter-version: '3.19.6'
+    - run: flutter pub get
+    - run: flutter test
+    - run: flutter build apk --release
