--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,13 @@ dev_dependencies:
   intl_translation: ^0.19.0
   bloc_test: ^9.1.7
   mocktail: ^1.0.3
+  flutter_launcher_icons: ^0.13.1
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/icons/food_savior_logo.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
