--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   google_fonts: ^6.2.1
   font_awesome_flutter: ^10.7.0
   flow_builder: ^0.1.0
+  lottie: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -83,6 +84,9 @@ flutter:
 
   assets:
     - assets/
+    - assets/animations/
+    - assets/icons/
+    - assets/images/
     - lib/languages/
 
   fonts:
