--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   flow_builder: ^0.1.0
   lottie: ^3.1.0
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_test:
