--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -17,7 +17,7 @@
 	<key>PROJECT_ID</key>
 	<string>foodsavior-792ee</string>
 	<key>STORAGE_BUCKET</key>
-	<string>foodsavior-792ee.appspot.com</string>
+	<string>foodsavior-792ee.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
