--- a/macos/Runner/GoogleService-Info.plist
+++ b/macos/Runner/GoogleService-Info.plist
@@ -17,7 +17,7 @@
 	<key>PROJECT_ID</key>
 	<string>foodsavior-792ee</string>
 	<key>STORAGE_BUCKET</key>
-	<string>foodsavior-792ee.appspot.com</string>
+	<string>foodsavior-792ee.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:376153272412:ios:543478546365b406043699</string>
+	<string>1:376153272412:ios:52ec29674aebba72043699</string>
 </dict>
 </plist>
