--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,56 +19,45 @@ dependencies:
   form_inputs:
     path: packages/form_inputs
   intl: ^0.19.0
-  image_cropper: ^6.0.0
+  image_cropper: ^8.0.2
   image_picker: ^1.0.7
   dotted_border: ^2.1.0
   cupertino_icons: ^1.0.6
-  flutter_bloc: ^8.1.5
+  flutter_bloc: ^8.1.6
   equatable: ^2.0.5
   material_design_icons_flutter: ^7.0.7296
-  firebase_core: ^2.30.1
+  firebase_core: ^3.7.0
   shared_preferences: ^2.2.3
-  curved_labeled_navigation_bar: ^2.0.2
-  flutter_slidable: ^3.1.0
+  curved_labeled_navigation_bar: ^2.0.5
+  flutter_slidable: ^3.1.1
   test: ^1.24.9
-  meta: ^1.11.0
-  formz: ^0.7.0
+  meta: ^1.15.0
+  formz: ^0.8.0
   google_fonts: ^6.2.1
   font_awesome_flutter: ^10.7.0
   flow_builder: ^0.1.0
-  lottie: ^3.1.0
-  uuid: ^4.4.0
-  cloud_firestore: ^4.17.3
+  lottie: ^3.1.3
+  uuid: ^4.5.1
+  cloud_firestore: ^5.4.5
+  firebase_auth: ^5.3.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
   intl_translation: ^0.20.0
   bloc_test: ^9.1.7
   mocktail: ^1.0.3
-  flutter_launcher_icons: ^0.13.1
+  flutter_launcher_icons: ^0.14.1
 
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
   remove_alpha_ios: true
   image_path: "assets/icons/food_savior_logo.png"
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
   assets:
