fix: add fl_chart package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   uuid: ^4.5.1
   cloud_firestore: ^5.4.5
   firebase_auth: ^5.3.2
+  fl_chart: ^0.69.0
 
 dev_dependencies:
   flutter_test:
