--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   cloud_firestore: ^5.4.5
   firebase_auth: ^5.3.2
   fl_chart: ^0.69.0
+  hive: ^4.0.0-dev.2
+  isar_flutter_libs: ^4.0.0-dev.13
+  bee_hive: ^0.0.0-dev.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
