--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   form_inputs:
     path: packages/form_inputs
   intl: ^0.19.0
+  intl_utils: ^2.8.7
   image_cropper: ^8.0.2
   image_picker: ^1.0.7
   dotted_border: ^2.1.0
