--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   dotted_border: ^2.1.0
   cupertino_icons: ^1.0.6
   flutter_bloc: ^8.1.6
-  equatable: ^2.0.5
+  equatable: ^2.0.7
   material_design_icons_flutter: ^7.0.7296
   firebase_core: ^3.7.0
   shared_preferences: ^2.2.3
@@ -42,10 +42,9 @@ dependencies:
   cloud_firestore: ^5.4.5
   firebase_auth: ^5.3.2
   fl_chart: ^0.69.0
-  hive: ^4.0.0-dev.2
-  isar_flutter_libs: ^4.0.0-dev.13
-  bee_hive: ^0.0.0-dev.1
   path_provider: ^2.1.5
+  hive_ce: ^2.8.0+1
+  hive_ce_flutter: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -54,8 +53,10 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   intl_translation: ^0.20.0
   bloc_test: ^9.1.7
-  mocktail: ^1.0.3
   flutter_launcher_icons: ^0.14.1
+  hive_ce_generator: ^1.8.0
+  build_runner: ^2.4.13
+  mockito: ^5.4.4
 
 flutter_launcher_icons:
   android: "launcher_icon"
