--- a/windows/.gitignore
+++ b/windows/.gitignore
@@ -15,3 +15,7 @@ x86/
 *.[Cc]ache
 # but keep track of directories ending in .cache
 !*.[Cc]ache/
+
+# generated files
+GeneratedPluginRegistrant.*
+generated_plugin_registrant.*
