--- a/macos/Runner/GoogleService-Info.plist
+++ b/macos/Runner/GoogleService-Info.plist
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.foodSavior</string>
+	<string>com.RateyHJ.foodSavior</string>
 	<key>PROJECT_ID</key>
 	<string>foodsavior-792ee</string>
 	<key>STORAGE_BUCKET</key>
